--- a/src/app/assets/css/backend.css
+++ b/src/app/assets/css/backend.css
@@ -1256,9 +1256,9 @@ pre {
 
 .table tbody tr:hover {
   color: #535f6b;
-  box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: 20px !important;
 }
 .profile-details ul{
   padding: 0 !important;
@@ -17526,7 +17526,7 @@ ul.iq-contact-rest li a p {
     -ms-border-radius: 8px;
     -o-border-radius: 8px;
     border-radius: 8px; }
-  .dark .files-table .tbl-server-info tr:hover {
+  /* .dark .files-table .tbl-server-info tr:hover {
     -webkit-box-shadow: 0 0 13px 10px #202023;
     -moz-box-shadow: 0 0 13px 10px #202023;
     -ms-box-shadow: 0 0 13px 10px #202023;
@@ -17536,7 +17536,7 @@ ul.iq-contact-rest li a p {
     -moz-border-radius: 8px;
     -ms-border-radius: 8px;
     -o-border-radius: 8px;
-    border-radius: 8px; }
+    border-radius: 8px; } */
   .dark .plan-bg {
     background: #121212; }
   .dark .dropdown-bg.btn.bg-white {
@@ -17600,3 +17600,73 @@ ul.iq-contact-rest li a p {
 @media (max-width: 991px) {
   .dark .navbar-collapse {
     background: #121212; } }
+
+  table .post-load-thumbnail{
+    height: 30px;
+    margin: 4px;
+    width: 30px;
+    border-radius: 4px;
+  }
+  .table thead th {
+    font-size: 15px !important;
+  }
+  table tr td{
+    color: #6e6e6e !important;
+
+  }
+  .filelist span a {
+    color: #6e6e6e !important;
+
+  }
+.table-row {
+    position: relative;
+  }
+  .action-icon {
+    visibility: hidden;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .table-row:hover .action-icon {
+    visibility: visible;
+  }
+
+  .more-button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 3px;
+    cursor: pointer;
+  }
+  .file_details{
+    margin-left: 20px;
+    margin-top: 20px;
+  }
+  .file_details p{
+font-size: 12px;
+line-height: 0px;
+  }
+  .fileviewHeader{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    background-color: #fff !important;
+  }
+
+  #proxy-renderer{
+    position: relative;
+  height: 319px !important;
+  background: #f5f5f5;
+  }
+
+  #react-doc-viewer #header-bar {
+    background-color: #f5f5f5;
+  }
+  .jVOngj{
+    background: #f5f5f5 !important;
+    overflow: scroll;
+  }
+  #pdf-controls{
+    display: none !important;
+  }
